--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,6 @@
+@import './components/';
+@import './variables/';
+
 * {
   margin:0;
   padding:0;
@@ -56,3 +59,27 @@ a {
 h1,h2,h3,h4,h5,h6 {
   font-weight: normal;
 }
+
+.App {
+  width:fit-content;
+  margin: 20% auto;
+  padding: 30px;
+  border: 1px solid $gray;
+  border-radius: 10px;
+}
+
+.Titulo {
+  font-size: 22px;
+  font-weight: bold;
+  text-transform: uppercase; 
+  padding: 10px 0;
+  color: $title;
+
+  &--subrayado {
+    border-bottom: 6px solid $green;
+  }
+
+
+}
+
+
